# locate-error

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
locate-error-core/: Cargo.toml
locate-error-core/src/: lib.rs
locate-error-derive/: Cargo.toml
locate-error-derive/src/: lib.rs
locate-error-derive/tests/: test_macro.rs
locate-error-derive/tests/it/: enums.rs  struct_incorrect_fields.rs  struct_incorrect_fields.stderr  struct_variant_enum_incorrect_fields.rs  struct_variant_enum_incorrect_fields.stderr  structs.rs  thiserror.rs  tuple_enum_incorrect_fields.rs  tuple_enum_incorrect_fields.stderr
src/: lib.rs
