[package]
name = "locate-error"
version = "0.1.1"
edition = "2024"
description = "Add location info to errors"
authors = ["Bryan Lee <brylee10.dev@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/brylee10/locate-error"

[dependencies]
locate-error-derive = { version = "0.1.1", path = "locate-error-derive" }
locate-error-core = { version = "0.1.1", path = "locate-error-core" }

[dev-dependencies]
thiserror = "2"

[workspace]
members = [".", "locate-error-derive", "locate-error-core"]