[package]
name = "locate-error-derive"
version = "0.1.1"
edition = "2024"
description = "Implementation of locate-error"
authors = ["Bryan Lee <brylee10.dev@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/brylee10/locate-error"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["extra-traits", "full"] }
trybuild = "1.0.104"

[dev-dependencies]
thiserror = "2"
locate-error = { path = ".." }